<resources>
    <string name="app_name">Capstone</string>
    <!--BOTTOM NAV TITLES-->
    <string name="title_reports">Reports</string>
    <string name="title_capture">Capture</string>
    <string name="title_trending">Trending</string>
    <string name="title_map">Map</string>
    <string name="title_contacts">Contacts</string>

    <!--BOTTOM NAV TITLES-->
    <string name="title_profile">My Profile</string>
    <string name="title_settings">Settings</string>

    <!--ACTIVITY TITLES-->
    <string name="title_activity_trending">Trending</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_details">Details</string>

    <!--TOGGLE BUTTON TITLES-->
    <string name="tbtn_fire">Fire</string>
    <string name="tbtn_earthquake">Earthquake</string>
    <string name="tbtn_flood">Flood</string>
    <string name="tbtn_epidemic">Epidemic</string>
    <string name="tbtn_motor">Motor</string>
    <string name="tbtn_meteorological">Meteorological</string>
    <string name="tbtn_text_off"></string>
    <string name="tbtn_text_on"></string>

    <!--CONTENT DESCRIPTIONS-->
    <string name="capture_content_description_img_view">Gallery</string>

    <!-- Text fields Texts -->
    <string name="txt_caption_placeholder">Write a caption&#8230;</string>
    <string name="txt_location_placeholder">Location in words&#8230;</string>
    <string name="txt_other_placeholder">Category&#8230;</string>
    <string name="txt_date_placeholder">dd-MM-yyyy</string>

    <!-- Labels -->
    <string name="lbl_caption">Caption:</string>
    <string name="lbl_category">Category:</string>
    <string name="lbl_default">Label:</string>
    <string name="lbl_location">Location:</string>
    <string name="lbl_radio_others">Other:</string>

    <!-- BUTTON TEXTS -->
    <string name="btn_submit">Submit</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="default_content_description">Content details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_trending_fragment">Hello Trending fragment</string>
    <string name="hello_contacts_fragment">Hello Contacts fragment</string>
    <string name="hello_map_fragment">Hello Map fragment</string>
    <string name="hello_reports_fragment">Hello Reports fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_img_content_description">Reports image content details</string>
    <string name="caption_placeholder">Caption</string>
    <string name="category_placeholder">Category</string>
    <string name="default_text">Text</string>
    <string name="map_search_hint">Enter Address or City&#8230;</string>
    <string name="sign_out">Sign out&#8230;</string>
    <string name="profile">Profile</string>
</resources>
