<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:iconTint="@color/icon_tint"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:iconTint="@color/icon_tint"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_capture"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:iconTint="@color/icon_tint"
        android:title="@string/title_capture" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_receipt_black_24dp"
        android:iconTint="@color/icon_tint"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contact_phone_black_24dp"
        android:iconTint="@color/icon_tint"
        android:title="@string/title_contacts" />

</menu>
