<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_report"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_report_height"
    android:gravity="fill_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/item_cv_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?selectableItemBackground">

        <RelativeLayout
            android:id="@+id/rl_cardview_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/material_16">

            <ImageView
                android:id="@+id/img_report_pic"
                android:layout_width="@dimen/img_report_pic_width"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/report_img_content_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_image_black_24dp" />

            <TextView
                android:id="@+id/item_report_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/img_report_pic"
                android:text="@string/txt_date_placeholder"
                android:textAlignment="textEnd"
                android:textSize="@dimen/txt_size_12" />

            <TextView
                android:id="@+id/item_report_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_report_date"
                android:layout_marginEnd="@dimen/material_8"
                android:layout_marginStart="@dimen/material_8"
                android:layout_marginTop="@dimen/material_8"
                android:layout_toEndOf="@id/img_report_pic"
                android:gravity="fill_horizontal"
                android:text="@string/caption_placeholder"
                android:textSize="@dimen/txt_size_18" />

            <ImageView
                android:id="@+id/item_img_report_category"
                android:layout_width="@dimen/material_24"
                android:layout_height="@dimen/material_24"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/txt_report_location_words"
                android:layout_alignTop="@id/item_report_category"
                android:layout_toEndOf="@id/img_report_pic"
                android:contentDescription="@string/report_img_content_description"
                app:srcCompat="@drawable/ic_flood" />

            <TextView
                android:id="@+id/item_report_category"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_status_icon_size"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/material_16"
                android:layout_toEndOf="@+id/item_img_report_category"
                android:layout_toStartOf="@id/item_img_report_status"
                android:text="@string/category_placeholder"
                android:textSize="@dimen/txt_size_12" />

            <TextView
                android:id="@+id/txt_report_location_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_report_caption"
                android:layout_marginEnd="@dimen/material_8"
                android:layout_marginStart="@dimen/material_8"
                android:layout_marginTop="@dimen/material_8"
                android:layout_toEndOf="@id/img_report_pic"
                android:text="Location"
                android:textSize="@dimen/txt_size_12" />

            <ImageView
                android:id="@+id/item_img_report_status"
                android:layout_width="@dimen/material_24"
                android:layout_height="@dimen/material_24"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/item_report_category"
                android:contentDescription="@string/default_content_description"
                app:srcCompat="@drawable/ic_image_black_24dp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
